# GrumpyMovieTexture

./: .bintray.ios.debug.json  .bintray.ios.json  .bintray.ios8.json  .bintray.ios9.json  .bintray.json  .bintray.ndk.armv7a.json  .bintray.ndk.x86.json  .bintray.osx.json  .gitignore  .ios.xcconfig  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Sources/: CMakeLists.txt  PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_D3D9.cpp  RenderAPI_OpenGL2.cpp  RenderAPI_OpenGLCoreES.cpp  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerInterface.cpp  ZipStream.cpp  ZipStream.h
Unity/: UpdatePluginsFolder.bat
Unity/GrumpyProject/Assets/GrumpyExample/: MovieController.cs  MovieMaterial.mat  MovieOnMesh.unity  MovieRT.renderTexture
Unity/GrumpyProject/Assets/GrumpyMovieTexture/: UserGuide.md  VideoPlayer.cs
Unity/GrumpyProject/Assets/GrumpyMovieTexture/Plugins/GrumpyMovieTexture.bundle/Contents/: Info.plist
Unity/GrumpyProject/Assets/GrumpyMovieTexture/Plugins/GrumpyMovieTexture.bundle/Contents/MacOS/: GrumpyMovieTexture
Unity/GrumpyProject/Assets/GrumpyMovieTexture/Plugins/iOS/: AudioSession.m
Unity/GrumpyProject/Assets/GrumpyMovieTexture/Resources/: VideoPlayer.shader
Unity/GrumpyProject/Assets/GrumpyMovieTexure/: VideoPlayer.cs  VideoPlayer.mat  VideoPlayer.shader
Unity/GrumpyProject/Assets/StreamingAssets/: av_sync_test.ogv  big_buck_bunny_480p_stereo.ogv
Unity/GrumpyProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
